feat: 新增視窗全螢幕
Usage:

- controls 加入 'zoom'
- 如果需要自訂全螢幕範圍，使用 config.selectors.zoom.container

Close #1167

--- a/src/less/plyr.less
+++ b/src/less/plyr.less
@@ -244,6 +244,7 @@
 .plyr--captions-active .plyr__captions {
     display: block;
 }
+.plyr--zoom-active .plyr__captions,
 .plyr--fullscreen-active .plyr__captions {
     font-size: @plyr-font-size-captions-large;
 }
@@ -311,6 +312,7 @@
     }
 
     // Hide toggle icons by default
+    .icon--exit-zoom,
     .icon--exit-fullscreen,
     .icon--muted,
     .icon--captions-on {
@@ -422,6 +424,7 @@
 }
 
 // Change icons on state change
+.plyr--zoom-active .icon--exit-zoom,
 .plyr--fullscreen-active .icon--exit-fullscreen,
 .plyr--muted .plyr__controls .icon--muted,
 .plyr--captions-active .plyr__controls .icon--captions-on {
@@ -434,10 +437,12 @@
 
 // Some options are hidden by default
 .plyr [data-plyr='captions'],
+.plyr [data-plyr='zoom'],
 .plyr [data-plyr='fullscreen'] {
     display: none;
 }
 .plyr--captions-enabled [data-plyr='captions'],
+.plyr--zoom-enabled [data-plyr='zoom'],
 .plyr--fullscreen-enabled [data-plyr='fullscreen'] {
     display: inline-block;
 }
@@ -717,7 +722,7 @@
 
 // Fullscreen
 // --------------------------------------------------------------
-.plyr--fullscreen-active {
+.plyr--zoom-active, .plyr--fullscreen-active {
     position: fixed;
     top: 0;
     left: 0;
