--- a/src/sass/hahow-plyr.scss
+++ b/src/sass/hahow-plyr.scss
@@ -124,6 +124,7 @@ $plyr-font-size-captions-small: 24px;
 
 .plyr__volume {
     max-width: 100px;
+    width:100px;
 
     @media (min-width: $plyr-bp-sm) {
         max-width: 100px;
